bump package and fixed image height on mobile and fixed onSave bug after publishing

--- a/next/pages/app.css
+++ b/next/pages/app.css
@@ -47,6 +47,11 @@
     font-weight: 200;
     color: #666666;
   }
+
+  .ui.items:not(.unstackable) > .item > .image,
+  .ui.items:not(.unstackable) > .item > .image > img {
+    overflow: hidden;
+  }
 }
 
 .ui.items > .item > .image:not(.ui) {
